--- a/Feature Engineering.ipynb
+++ b/Feature Engineering.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Feature Engineering\n",
     "\n",
-    "This part of the project uses the previously cleaned dataset. The steps are described [here]().\n",
+    "This part of the project uses the previously cleaned dataset. The steps are described [here](https://github.com/marcopeix/credit-modelling-lending-club/blob/master/Modelling.ipynb).\n",
     "\n",
     "**Techniques used:**\n",
     "* Pandas"
